--- a/style/index_s.css
+++ b/style/index_s.css
@@ -1,7 +1,9 @@
 .slider{
     display: block;
-    width:60vw;
+    width:50vw;
     margin: 0 auto;
+    border: 2px solid black;
+    border-radius:1vw;
 }
 .product>div{
     position:relative;
@@ -25,13 +27,14 @@ section div>img{
     font-size: 1.5vw;
     margin: 4vw auto;
     padding: 1vw;
+    border: 2px solid rgba(84, 158, 163, 0.721);
     border-radius: 2%;
 }
 .product>h3{
     width: fit-content;
     margin: 1vw auto;
     padding: 3vw;
-    font-size: 3vw;
+    font-size: 2.5vw;
     font-family:Georgia, 'Times New Roman', Times, serif;
 }
 .product a{
