--- a/style/contact.css
+++ b/style/contact.css
@@ -62,3 +62,45 @@ form{
     cursor: pointer;
     color:#b7ced2;
 }
+
+
+@media screen and (max-width:720px){
+    form{
+        background-color: rgb(0,0,0,0.5);
+        width: 70vw;
+        height: 40vw;
+        font-size: 2.5vw;
+    }
+    .lemail{
+        top:5%;
+        left:41%;
+    
+    }
+    .email{
+        top:13%;
+        left:16%;
+        width: 67%;
+        height: 11%;
+        font-size: 84%;
+    }
+    .lmass{
+        
+        top:25%;
+        left:41%;   
+    }
+    .mass{
+        top:32%;
+        left:16%;
+        width: 67%;
+        height: 50%;
+        font-size: 84%;
+    }
+    
+    .submit{
+        bottom:3%;
+        left:40%;
+        display: block;
+        padding: 2% 7%;
+        font-size: 70%;
+    }
+}
